--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
         <!-- default is image block -->
         <div class="default">
-            <h1>Welcome to Be-Practical</h1>
+            <h1>Welcome to DEF</h1>
         </div>
         <!-- .image block ends -->
         <!-- testimonial -->
